# hn

./: .gitignore  Makefile  README.md  hn.py
src/: MANIFEST.in  pyproject.toml  requirements.txt
src/hn/: api.py  app.py  bus.py  hn.py  pango.py  resources.gresource.xml
src/hn/css/: reader_mode.css  style.css
src/hn/js/: Readability.js
src/hn/ui/: CommentItem.ui  CommentThread.ui  MainWindow.ui  NewsHeader.ui  NewsItem.ui  NewsList.ui  ThreadHeader.ui  WebsiteHeader.ui  WebsiteView.ui
src/tests/: test_api.py  test_pango.py
