[tool.poetry]
name = "hn"
version = "0.1.0"
description = ""
authors = ["david <davidventura27@gmail.com>"]
include = ["resources"]

[tool.poetry.scripts]
hn = "hn.hn:main"

[tool.poetry.dependencies]
beautifulsoup4 = "4.9.3"
python = "^3.6"
requests = "^2.25.1"
lxml = "4.6.3"
wheel = "^0.36.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"
